package org.example.TEMARIO_CURSO.TEMA6POO.PRACTICA1;


public class AppEcommerce {
    /**
    * Clase principal (main).
    * Esta clase inicia el sistema de pago mediante la clase tienda.
    */

    public static void main(String[] args) {
        Tienda.iniciarPago();
    }

}


