@startuml
package "org.example.TEMA6.PRACTICA1" {

abstract class MetodoPago {
    +procesarPago(importe : double)
    +validar() : boolean
}

class Bizum {
    -telefono : String
    -pin : int
    +procesarPago(importe : double)
    +validar() : boolean
}

class PayPal {
    -cuenta : String
    -saldo : double
    +procesarPago(importe : double)
    +validar() : boolean
}

class TarjetaCredito {
    -nro_tarjeta : String
    -tipo : String
    +procesarPago(importe : double)
    +validar() : boolean
}

class Tienda {
    +realizarPago(metodo : MetodoPago)
    +iniciarPago()
}

class AppEcommerce {
    +main(args : String[])
}

MetodoPago <|-- Bizum
MetodoPago <|-- PayPal
MetodoPago <|-- TarjetaCredito
Tienda --> MetodoPago
AppEcommerce --> Tienda
}
@enduml